--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>__PROJECT_URL__</RepositoryUrl>
+    <RepositoryUrl>https://github.com/RobynLlama/Flashlightier-LC</RepositoryUrl>
   </PropertyGroup>
 
   <PropertyGroup>
