--- a/src/Flashlightier-LC/Flashlightier-LC.csproj
+++ b/src/Flashlightier-LC/Flashlightier-LC.csproj
@@ -8,10 +8,10 @@
       You should probably not edit them by hand if you've already published
       to the Thunderstore.
     -->
-    <AssemblyName>__PROJECT_GUID__</AssemblyName>
-    <Authors>__PROJECT_AUTHOR__</Authors>
-    <Description>__PROJECT_DESC__</Description>
-    <Product>LCMPublishingTemplate</Product>
+    <AssemblyName>dev.mamallama.lcmod.flashlightier</AssemblyName>
+    <Authors>LethalCompanyModding</Authors>
+    <Description>Allows modifying various values of the flashlight/pro flashlight</Description>
+    <Product>Flashlightier_LC</Product>
     <!--
       Except this, you should keep this up to date with your publishing tags.
     -->
