fix: allow unsafe code blocks

--- a/src/Flashlightier-LC/Flashlightier-LC.csproj
+++ b/src/Flashlightier-LC/Flashlightier-LC.csproj
@@ -23,6 +23,7 @@
     <ProjectDepsFileName>$(Product).deps.json</ProjectDepsFileName>
     <RootNamespace>$(Product)</RootNamespace>
     <TargetName>$(Product)</TargetName>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <!--
